--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="block.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="playfield.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="block.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="playfield.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
