--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -71,11 +71,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="block.c" />
+    <ClCompile Include="colors.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="playfield.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="block.h" />
+    <ClInclude Include="colors.h" />
     <ClInclude Include="playfield.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
