Final version for school project, comments in Polish

--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="colors.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="highscores.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="block.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="colors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="highscores.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
